<resources>
    <string name="app_name">Farkle</string>
    <string name="new_game">Start a new game</string>
    <string name="player_name_label">Your name</string>
    <string name="win_score_label">Win score</string>
    <string name="default_win_score">10000</string>
    <string name="create_game">Create</string>
    <string name="error">Error</string>
    <string name="roll">Roll</string>
    <string name="pass">Pass</string>
    <string name="scorelist_playerlabel">Player</string>
    <string name="scorelist_scorelabel">Score</string>
    <string name="turn_announcer">It\'s player %1$s\'s turn.</string>
    <string name="version">%1$s (%2$d)</string>
    <string name="bad_mustnotbeempty">This must not be empty!</string>
    <string name="bad_winscore">The score must be a whole number greater than zero!</string>
</resources>