<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InGameActivity">

    <ImageView
        android:id="@+id/imageViewDice1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dice_bg" />

    <ImageView
        android:id="@+id/imageViewDice2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/error"
        app:layout_constraintStart_toEndOf="@+id/imageViewDice1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dice_bg" />

    <ImageView
        android:id="@+id/imageViewDice3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/error"
        app:layout_constraintStart_toEndOf="@+id/imageViewDice2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dice_bg" />

    <ImageView
        android:id="@+id/imageViewDice6"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/error"
        app:layout_constraintStart_toEndOf="@+id/imageViewDice5"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDice3"
        app:srcCompat="@drawable/ic_dice_bg" />

    <ImageView
        android:id="@+id/imageViewDice5"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/error"
        app:layout_constraintStart_toEndOf="@+id/imageViewDice4"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDice2"
        app:srcCompat="@drawable/ic_dice_bg" />

    <ImageView
        android:id="@+id/imageViewDice4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDice1"
        app:srcCompat="@drawable/ic_dice_bg" />

    <Button
        android:id="@+id/buttonRoll"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/roll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewDice3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPass"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewDice6"
        app:layout_constraintTop_toBottomOf="@+id/buttonRoll" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTurnAnnouncer">

        <LinearLayout
            android:id="@+id/linearLayoutScoreBoard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutScoreBoardLabelRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewScoreListScoreLabel"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scorelist_scorelabel"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewScoreListPlayerLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/scorelist_playerlabel"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textViewScoreListScoreLabel"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textViewTurnAnnouncer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDice6" />

</androidx.constraintlayout.widget.ConstraintLayout>